<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Launcher">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/welcome_title"
        android:padding="5dp"
        android:text="@string/welcome_title"
        android:textSize="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:textColor="@color/colorAccent"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome_title"
        android:layout_centerHorizontal="true"
        android:id="@+id/image_layout">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/zero"
        android:id="@+id/image_zero_up_left"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/zero"
        android:id="@+id/image_zero_up_right"
        android:layout_toRightOf="@id/image_zero_up_left"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/five"
        android:layout_below="@id/image_zero_up_left"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/zero_down"
        android:layout_toRightOf="@id/image_zero_up_left"
        android:layout_below="@id/image_zero_up_left"/>
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_layout">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_btn"
        android:textSize="25dp"
        android:textAllCaps="false"
        android:id="@+id/register_btn"
        android:onClick="createUser"
        android:visibility="visible"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_btn"
        android:textSize="25dp"
        android:textAllCaps="false"
        android:id="@+id/start_btn"
        android:visibility="gone"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/history_btn"
        android:textSize="25dp"
        android:id="@+id/history_btn"
        android:textAllCaps="false"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:visibility="gone"
        android:layout_below="@id/start_btn"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_account_btn"
        android:textSize="25dp"
        android:id="@+id/edit_account_btn"
        android:textAllCaps="false"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:visibility="gone"
        android:layout_below="@id/history_btn"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result_statistical_btn"
        android:textSize="25dp"
        android:textAllCaps="false"
        android:id="@+id/result_statistical_btn"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:visibility="gone"
        android:layout_below="@id/edit_account_btn"/>
    </RelativeLayout>
    </ScrollView>
</RelativeLayout>