<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GuessSum"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/opponent_info_layout"
        android:visibility="visible"
        android:layout_margin="10dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/opponentID_title_tv"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:text="@string/opponent_ID_title"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/opponentID_tv"
                android:layout_marginRight="10dp"
                android:textSize="20dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/opponentName_title_tv"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:text="@string/opponent_name_title"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/opponentName_tv"
                android:layout_marginRight="10dp"
                android:textSize="20dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/opponentCountry_title_tv"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:text="@string/opponent_Country_title"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/opponentCountry_tv"
                android:layout_marginRight="10dp"
                android:textSize="20dp"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guess_sum_tv_title"
        android:textColor="@color/colorAccent"
        android:layout_gravity="center_horizontal"
        android:textSize="30dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textStyle="bold"
        android:textSize="30dp"
        android:onClick="choose0"
        android:text="0"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textStyle="bold"
        android:textSize="30dp"
        android:onClick="choose5"
        android:text="5"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textStyle="bold"
        android:textSize="30dp"
        android:onClick="choose10"
        android:text="10"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="30dp"
        android:onClick="choose15"
        android:layout_margin="20dp"
        android:text="15"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="30dp"
        android:layout_margin="20dp"
        android:onClick="choose20"
        android:text="20"/>
</LinearLayout>