<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ProgressBar
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:visibility="visible"
        android:id="@+id/progress_circular"
        android:layout_centerInParent="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/opponent_info_layout"
        android:visibility="gone"
        android:layout_margin="10dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/opponentID_title_tv"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:text="@string/opponent_ID_title"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/opponentID_tv"
            android:layout_marginRight="10dp"
            android:textSize="20dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/opponentName_title_tv"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:text="@string/opponent_name_title"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/opponentName_tv"
            android:layout_marginRight="10dp"
            android:textSize="20dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/opponentCountry_title_tv"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:text="@string/opponent_Country_title"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/opponentCountry_tv"
            android:layout_marginRight="10dp"
            android:textSize="20dp"/>
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/opponent_info_layout">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/user_choose_hands_layout"
        android:visibility="gone"
        android:orientation="vertical"
        android:layout_centerHorizontal="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_hands_tv_title"
            android:textColor="@color/colorAccent"
            android:textSize="30dp"
            android:layout_below="@id/opponent_info_layout"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorPrimaryDark"
            android:id="@+id/user_hand_0_0"
            android:layout_marginTop="10dp"
            android:onClick="choose_0_0"
            android:padding="5dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/zero_down" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/zero_down" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorPrimaryDark"
            android:id="@+id/user_hand_5_0"
            android:onClick="choose_5_0"
            android:layout_marginTop="10dp"
            android:padding="5dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/five" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/zero_down" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorPrimaryDark"
            android:id="@+id/user_hand_0_5"
            android:onClick="choose_0_5"
            android:layout_marginTop="10dp"
            android:padding="5dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/zero_down" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/five" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:onClick="choose_5_5"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorPrimaryDark"
            android:id="@+id/user_hand_5_5"
            android:layout_marginTop="10dp"
            android:padding="5dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/five" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/five" />
        </LinearLayout>
    </LinearLayout>
    </ScrollView>
</RelativeLayout>